# BookSummarizer

./: .env-template  .gitignore  INSTRUCTIONS.md  Makefile  README.md  documentation.md  mkdocs.yml  pyproject.toml  requirements.txt
.dvc/: config
booksum/: service.py  service_route.py  web_app.py
booksum/summarizer/: booksummarizer.py  evaluation.py
booksum/topic_modeling/: analyze.py
booksum/utils/: get_gutenberg.py  hash.py  io_ops.py  service_models.py  service_utils.py
config/: books_to_process.yaml  config_services.yaml
data/cache/: .gitignore
data/processed/: .gitignore  a299258521d8a7eef9e5b654cee1293b_clean.parquet.dvc  a431998dc6b5be299df90186a8a50223c9b8c985fbd451bf469819a618e96ae5_clean.parquet.dvc  booksum.parquet.dvc  topics_a299258521d8a7eef9e5b654cee1293b.parquet.dvc  topics_a431998dc6b5be299df90186a8a50223c9b8c985fbd451bf469819a618e96ae5.parquet.dvc
docs/: about.md  index.md  results.md
gutsum/: app.py  gutenberg_rag.py
gutsum/controller/: gutenberg_text_splitter.py  summary_generator.py
gutsum/faiss_vector_store/: index.faiss  index.pkl
gutsum/models/: gutenberg_loader.py
models/: .gitignore  a299258521d8a7eef9e5b654cee1293b_embeddings.pkl.dvc  a431998dc6b5be299df90186a8a50223c9b8c985fbd451bf469819a618e96ae5_embeddings.pkl.dvc  index_frac=0.1.dvc  index_frac=0.1_with_literacy.dvc  index_full.dvc  index_with_literacy.dvc  topic_model_a299258521d8a7eef9e5b654cee1293b.pkl.dvc  topic_model_a431998dc6b5be299df90186a8a50223c9b8c985fbd451bf469819a618e96ae5.pkl.dvc
notebooks/: Evaluation.ipynb  booksum_evaluation.ipynb  rag_app.ipynb
(+3 files in other folders)
